# foreign-lib-repro

./: Makefile  README.md  foreign-lib-repro.cabal
src/: Lib.hs  main.c  wrapper.c  wrapper.h
